fix group Overflow

--- a/assets/css/contents/group/group.scss
+++ b/assets/css/contents/group/group.scss
@@ -104,7 +104,6 @@
 		display:         flex;
 		flex-flow:       column nowrap;
 		justify-content: flex-start;
-		height:          100%;
 
 		padding:         padding_vertical('small') padding_horizontal('small');
 
